# Deimos

./: Deimos.py  pyproject.toml
libs/wizwalker/wizwalker/memory/memory_objects/: game_client.py
locale/: en.lang
src/: settings_manager.py  window_tiling.py
src/gui/: settings_dialog.py
